--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
-    "vite": "^7.1.2"
+    "vite": "^7.1.2",
+    "sass-embedded": "^1.97.3",
+    "vite-plugin-vue-devtools": "^8.0.5"
   }
 }
